# CI-CD-tests

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  GitVersion.yml  LICENSE  README.md  conanfile.txt  dir_49e56c817e5e54854c35e136979f97ca.html  dir_a61f22007e0f347cded0d82030ee545d.html  dir_a61f22007e0f347cded0d82030ee545d.js  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  index.html  install-catch2.ps1  install-catch2.sh  lib_8hpp_source.html  namespacelib.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js
docs/: mainpage.dox
include/lib/: lib.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  pages_0.js  searchdata.js
src/: StringViewSupport.cpp  lib.cpp
test/: tests.cpp
